--- a/serverless.yml
+++ b/serverless.yml
@@ -66,7 +66,7 @@ functions:
     events:
       - http:
           path: /fetchShopDataForUser
-          method: GET
+          method: POST
           cors: true
 
 resources:
