--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "primeng": "^11.3.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
