--- a/backend/resources/functions.yml
+++ b/backend/resources/functions.yml
@@ -1,9 +1,24 @@
 registerUser:
+  environment:
+      COGNITO_USER_POOL_ID:
+        Ref: CognitoUserPool
+      COGNITO_USER_POOL_CLIENT_ID:
+        Ref: CognitoUserPoolClient
   handler: src/lambdas/http/registerUser.handler
   events:
     - http:
         method: POST
-        path: v1/registerUser
+        path: registerUser
         cors: true
-
+  iamRoleStatementsName: ${self:custom.APP_NAME}-register-role
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - cognito-idp:AdminCreateUser
+        - cognito-idp:AdminInitiateAuth
+        - cognito-idp:AdminRespondToAuthChallenge
+      Resource:
+        Fn::GetAtt:
+          - CognitoUserPool
+          - Arn
     
